# dot2shader

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  default.json
dot2shader/: Cargo.toml  README.md  default.json
dot2shader-gui/: Cargo.toml  README.md
dot2shader-gui/resources/: index.html
dot2shader-gui/src/: app.rs  lib.rs  main.rs  util.rs
dot2shader/src/: lib.rs  main.rs
dot2shader/tests/: render-test.rs
src/: lib.rs  main.rs
