[package]
name = "dot2shader-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0"
dot2shader = { path = "../dot2shader" }

[profile.release]
opt-level = 2 # fast and small wasm
