[package]
name = "dot2shader-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0"
dot2shader = { path = "../dot2shader" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.6.3"
image = { version = "0.24.0", default-features = false, features = ["ico"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.56"
web-sys = { version = "0.3.56", features = [
    "console",
    "Document",
    "FileReader",
    "HtmlInputElement",
    "Window",
] }
wasm-bindgen-futures = "0.4.29"
