[package]
name = "dot2shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
render-test = ["glium"]

[dependencies]
glium = { version = "*", optional = true }
image = { version = "0.24.0", default-features = false, features = ["png", "gif", "bmp"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
